--- a/server/package.json
+++ b/server/package.json
@@ -2,26 +2,14 @@
   "name": "server",
   "private": true,
   "version": "0.0.0",
-  "workspaces": [
-    "login",
-    "posts"
-  ],
+  "type": "module",
   "scripts": {
-    "dev:login": "cd login && npm run dev",
-    "dev:posts": "cd posts && npm run dev",
-    "dev": "concurrently \"npm:dev:login\" \"npm:dev:posts\"",
+    "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@types/express": "4.17.14",
-    "@types/node": "18.7.23",
-    "nodemon": "2.0.20",
-    "ts-node": "10.9.1",
-    "ts-node-dev": "2.0.0"
-  },
-  "dependencies": {
-    "concurrently": "7.4.0",
-    "express": "4.18.1"
+    "typescript": "^4.6.4",
+    "vite": "^3.1.0"
   }
 }
