--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -15,6 +15,6 @@
     "noImplicitReturns": true,
     "strict": true
   },
-  "include": ["login/**/*, posts/**/*"],
+  "include": ["api/**/*"],
   "exclude": ["node_modules"]
 }
