--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -15,6 +15,5 @@
     "noImplicitReturns": true,
     "strict": true
   },
-  "include": ["login/**/*, posts/**/*"],
-  "exclude": ["node_modules"]
+  "include": ["login/**/*, posts/**/*"]
 }
