--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,8 @@
   },
   "dependencies": {
     "concurrently": "7.4.0",
+    "cors": "2.8.5",
+    "dotenv": "16.0.2",
     "express": "4.18.1"
   }
 }
