--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -15,5 +15,6 @@
     "noImplicitReturns": true,
     "strict": true
   },
-  "include": ["login/**/*, posts/**/*"]
+  "include": ["login/**/*, posts/**/*"],
+  "exclude": ["dist"]
 }
