--- a/server/login/package.json
+++ b/server/login/package.json
@@ -4,5 +4,8 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only index.ts"
+  },
+  "dependencies": {
+    "firebase-admin": "11.0.1"
   }
 }
