Basic posts structure

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 LOGIN_PORT=3010
 POST_PORT=3011
 HOST=localhost
-
+MONGO_DB_URI_TEST=mongodb+srv://travis:$travis@cluster0.l5ovygm.mongodb.net/?retryWrites=true&w=majority
 GOOGLE_APPLICATION_CREDENTIALS=C:\Users\ignac\Desktop\NO-COUNTRY\cohorte-7\server\config\firebase.json
