--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
       }
     ],
     "react/react-in-jsx-scope": "off",
-    "prefer-const": "warn"
+    "prefer-const": "warn",
+    "@typescript-eslint/no-empty-interface": "off"
   }
 }
