--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "travis-space",
   "version": "1.0.0",
-  "description": "",
+  "description": "![](https://img.shields.io/badge/node-16.17.0%20(LTS)-red)  ![](https://img.shields.io/badge/npm-8.19.2-orange)  ![](https://img.shields.io/badge/Typescript-4.8.3-lightgrey)  ![]()![]()![]()![]()",
   "main": "index.js",
   "scripts": {
+    "server:fake": "json-server --watch ./web/api_fake/api_fake.json --port 3005",
     "web:dev": "cd web && npm run dev",
     "server:dev": "cd server && npm run dev",
     "server:add": "cd server && npm install",
@@ -31,7 +32,283 @@
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.31.8",
     "eslint-plugin-react-hooks": "4.6.0",
+    "json-server": "0.17.0",
     "prettier": "2.7.1",
     "typescript": "4.8.3"
-  }
+  },
+  "dependencies": {
+    "abbrev": "^1.1.1",
+    "abort-controller": "^3.0.0",
+    "absolute-path": "^0.0.0",
+    "accepts": "^1.3.8",
+    "acorn": "^8.8.0",
+    "acorn-jsx": "^5.3.2",
+    "ajv": "^6.12.6",
+    "anser": "^1.4.10",
+    "ansi-fragments": "^0.2.1",
+    "ansi-regex": "^5.0.1",
+    "ansi-styles": "^4.3.0",
+    "anymatch": "^3.1.2",
+    "appdirsjs": "^1.2.7",
+    "arg": "^4.1.0",
+    "argparse": "^2.0.1",
+    "aria-hidden": "^1.2.1",
+    "aria-query": "^4.2.2",
+    "arr-diff": "^4.0.0",
+    "arr-flatten": "^1.1.0",
+    "arr-union": "^3.1.0",
+    "array-includes": "^3.1.5",
+    "array-union": "^2.1.0",
+    "array-unique": "^0.3.2",
+    "array.prototype.flat": "^1.3.0",
+    "array.prototype.flatmap": "^1.3.0",
+    "asap": "^2.0.6",
+    "assign-symbols": "^1.0.0",
+    "ast-types": "^0.14.2",
+    "ast-types-flow": "^0.0.7",
+    "astral-regex": "^1.0.0",
+    "async": "^3.2.4",
+    "async-limiter": "^1.0.1",
+    "atob": "^2.1.2",
+    "axe-core": "^4.4.3",
+    "axobject-query": "^2.2.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-plugin-dynamic-import-node": "^2.3.3",
+    "babel-plugin-macros": "^3.1.0",
+    "babel-plugin-polyfill-corejs2": "^0.3.3",
+    "babel-plugin-polyfill-corejs3": "^0.6.0",
+    "babel-plugin-polyfill-regenerator": "^0.4.1",
+    "babel-plugin-syntax-trailing-function-commas": "^7.0.0-beta.0",
+    "babel-preset-fbjs": "^3.4.0",
+    "balanced-match": "^1.0.2",
+    "base": "^0.11.2",
+    "base64-js": "^1.5.1",
+    "binary-extensions": "^2.2.0",
+    "bl": "^4.1.0",
+    "brace-expansion": "^1.1.11",
+    "braces": "^3.0.2",
+    "browserslist": "^4.21.4",
+    "bser": "^2.1.1",
+    "buffer-from": "^1.1.2",
+    "cache-base": "^1.0.1",
+    "call-bind": "^1.0.2",
+    "caller-callsite": "^2.0.0",
+    "caller-path": "^2.0.0",
+    "callsites": "^3.1.0",
+    "camelcase": "^5.3.1",
+    "caniuse-lite": "^1.0.30001412",
+    "chalk": "^4.1.2",
+    "chokidar": "^3.5.3",
+    "ci-info": "^3.4.0",
+    "class-utils": "^0.3.6",
+    "cli-spinners": "^2.7.0",
+    "cliui": "^6.0.0",
+    "clone-deep": "^4.0.1",
+    "collection-visit": "^1.0.0",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "colorette": "^1.4.0",
+    "command-exists": "^1.2.9",
+    "commondir": "^1.0.1",
+    "component-emitter": "^1.3.0",
+    "compressible": "^2.0.18",
+    "compression": "^1.7.4",
+    "compute-scroll-into-view": "^1.0.14",
+    "concat-map": "^0.0.1",
+    "concurrently": "^7.4.0",
+    "connect": "^3.7.0",
+    "content-disposition": "^0.5.4",
+    "content-type": "^1.0.4",
+    "convert-source-map": "^1.8.0",
+    "cookie": "^0.5.0",
+    "cookie-signature": "^1.0.6",
+    "copy-descriptor": "^0.1.1",
+    "copy-to-clipboard": "^3.3.1",
+    "core-js-compat": "^3.25.3",
+    "core-js-pure": "^3.25.3",
+    "core-util-is": "^1.0.3",
+    "cors": "^2.8.5",
+    "cosmiconfig": "^5.2.1",
+    "create-require": "^1.1.1",
+    "cross-spawn": "^7.0.3",
+    "css-box-model": "^1.2.1",
+    "csstype": "^3.1.1",
+    "damerau-levenshtein": "^1.0.8",
+    "date-fns": "^2.29.3",
+    "dayjs": "^1.11.5",
+    "debug": "^4.3.4",
+    "decamelize": "^1.2.0",
+    "decode-uri-component": "^0.2.0",
+    "deep-is": "^0.1.4",
+    "defaults": "^1.0.3",
+    "define-properties": "^1.1.4",
+    "define-property": "^2.0.2",
+    "denodeify": "^1.2.1",
+    "destroy": "^1.2.0",
+    "detect-node-es": "^1.1.0",
+    "diff": "^4.0.2",
+    "dir-glob": "^3.0.1",
+    "doctrine": "^3.0.0",
+    "dotenv": "^16.0.2",
+    "dynamic-dedupe": "^0.3.0",
+    "ee-first": "^1.1.1",
+    "electron-to-chromium": "^1.4.264",
+    "emoji-regex": "^9.2.2",
+    "encodeurl": "^1.0.2",
+    "end-of-stream": "^1.4.4",
+    "envinfo": "^7.8.1",
+    "error-ex": "^1.3.2",
+    "error-stack-parser": "^2.1.4",
+    "errorhandler": "^1.5.1",
+    "es-abstract": "^1.20.3",
+    "es-shim-unscopables": "^1.0.0",
+    "es-to-primitive": "^1.2.1",
+    "esbuild": "^0.15.9",
+    "esbuild-windows-64": "^0.15.9",
+    "escalade": "^3.1.1",
+    "escape-html": "^1.0.3",
+    "escape-string-regexp": "^4.0.0",
+    "eslint-import-resolver-node": "^0.3.6",
+    "eslint-module-utils": "^2.7.4",
+    "eslint-scope": "^5.1.1",
+    "eslint-utils": "^3.0.0",
+    "eslint-visitor-keys": "^3.3.0",
+    "espree": "^9.4.0",
+    "esprima": "^4.0.1",
+    "esquery": "^1.4.0",
+    "esrecurse": "^4.3.0",
+    "estraverse": "^5.3.0",
+    "esutils": "^2.0.3",
+    "etag": "^1.8.1",
+    "event-target-shim": "^5.0.1",
+    "execa": "^1.0.0",
+    "expand-brackets": "^2.1.4",
+    "express": "^4.18.1",
+    "extend-shallow": "^3.0.2",
+    "extglob": "^2.0.4",
+    "fast-deep-equal": "^3.1.3",
+    "fast-diff": "^1.2.0",
+    "fast-glob": "^3.2.12",
+    "fast-json-stable-stringify": "^2.1.0",
+    "fast-levenshtein": "^2.0.6",
+    "fastq": "^1.13.0",
+    "fb-watchman": "^2.0.2",
+    "file-entry-cache": "^6.0.1",
+    "fill-range": "^7.0.1",
+    "finalhandler": "^1.1.2",
+    "find-cache-dir": "^2.1.0",
+    "find-root": "^1.1.0",
+    "find-up": "^5.0.0",
+    "flat-cache": "^3.0.4",
+    "flatted": "^3.2.7",
+    "flow-parser": "^0.121.0",
+    "focus-lock": "^0.11.3",
+    "for-in": "^1.0.2",
+    "forwarded": "^0.2.0",
+    "fragment-cache": "^0.2.1",
+    "framer-motion": "^7.4.0",
+    "framesync": "^5.3.0",
+    "fresh": "^0.5.2",
+    "fs-extra": "^8.1.0",
+    "fs.realpath": "^1.0.0",
+    "function-bind": "^1.1.1",
+    "function.prototype.name": "^1.1.5",
+    "functions-have-names": "^1.2.3",
+    "gensync": "^1.0.0-beta.2",
+    "get-caller-file": "^2.0.5",
+    "get-intrinsic": "^1.1.3",
+    "get-nonce": "^1.0.1",
+    "get-stream": "^4.1.0",
+    "get-symbol-description": "^1.0.0",
+    "get-value": "^2.0.6",
+    "glob": "^7.2.3",
+    "glob-parent": "^6.0.2",
+    "globals": "^13.17.0",
+    "globby": "^11.1.0",
+    "graceful-fs": "^4.2.10",
+    "grapheme-splitter": "^1.0.4",
+    "growly": "^1.3.0",
+    "has": "^1.0.3",
+    "has-bigints": "^1.0.2",
+    "has-flag": "^4.0.0",
+    "has-property-descriptors": "^1.0.0",
+    "has-symbols": "^1.0.3",
+    "has-tostringtag": "^1.0.0",
+    "has-value": "^1.0.0",
+    "has-values": "^1.0.0",
+    "hermes-engine": "^0.11.0",
+    "hermes-estree": "^0.6.0",
+    "hermes-parser": "^0.6.0",
+    "hermes-profile-transformer": "^0.0.6",
+    "hey-listen": "^1.0.8",
+    "hoist-non-react-statics": "^3.3.2",
+    "iconv-lite": "^0.4.24",
+    "ieee754": "^1.2.1",
+    "ignore": "^5.2.0",
+    "ignore-by-default": "^1.0.1",
+    "import-fresh": "^3.3.0",
+    "imurmurhash": "^0.1.4",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "internal-slot": "^1.0.3",
+    "invariant": "^2.2.4",
+    "ip": "^1.1.8",
+    "ipaddr.js": "^1.9.1",
+    "is-accessor-descriptor": "^1.0.0",
+    "is-arrayish": "^0.2.1",
+    "is-bigint": "^1.0.4",
+    "is-binary-path": "^2.1.0",
+    "is-boolean-object": "^1.1.2",
+    "is-buffer": "^1.1.6",
+    "is-callable": "^1.2.7",
+    "is-core-module": "^2.10.0",
+    "is-data-descriptor": "^1.0.0",
+    "is-date-object": "^1.0.5",
+    "is-descriptor": "^1.0.2",
+    "is-directory": "^0.3.1",
+    "is-docker": "^2.2.1",
+    "is-extendable": "^1.0.1",
+    "is-extglob": "^2.1.1",
+    "is-fullwidth-code-point": "^2.0.0",
+    "is-glob": "^4.0.3",
+    "is-interactive": "^1.0.0",
+    "is-negative-zero": "^2.0.2",
+    "is-number": "^7.0.0",
+    "is-number-object": "^1.0.7",
+    "is-plain-object": "^2.0.4",
+    "is-regex": "^1.1.4",
+    "is-shared-array-buffer": "^1.0.2",
+    "is-stream": "^1.1.0",
+    "is-string": "^1.0.7",
+    "is-symbol": "^1.0.4",
+    "is-unicode-supported": "^0.1.0",
+    "is-weakref": "^1.0.2",
+    "is-windows": "^1.0.2",
+    "is-wsl": "^2.2.0",
+    "isarray": "^1.0.0",
+    "isexe": "^2.0.0",
+    "isobject": "^3.0.1",
+    "jest-get-type": "^26.3.0",
+    "jest-validate": "^26.6.2",
+    "jetifier": "^1.6.8",
+    "joi": "^17.6.1",
+    "js-sdsl": "^4.1.4",
+    "js-tokens": "^4.0.0",
+    "js-yaml": "^4.1.0",
+    "jsc-android": "^250230.2.1",
+    "jscodeshift": "^0.13.1",
+    "jsesc": "^2.5.2",
+    "json-parse-better-errors": "^1.0.2",
+    "json-parse-even-better-errors": "^2.3.1",
+    "json-schema-traverse": "^0.4.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/No-Country/C7-07.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/No-Country/C7-07/issues"
+  },
+  "homepage": "https://github.com/No-Country/C7-07#readme"
 }
