--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
 	"prettier.enable": true,
 	"editor.defaultFormatter": "esbenp.prettier-vscode",
 	"editor.formatOnSave": true,
-	"eslint.enable": true
+	"eslint.enable": true,
+	"typescript.tsdk": "node_modules\\typescript\\lib"
 }
