--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "posts"
   ],
   "scripts": {
-    "dev": "tsnd --respawn --transpile-only src/index.ts"
+    "dev": "tsnd --respawn --transpile-only src/index.ts",
+    "start": "node ./dist/index.js"
   },
   "devDependencies": {
     "@types/bcrypt": "5.0.0",
