--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/bcrypt": "5.0.0",
     "@types/compression": "1.7.2",
+    "@types/cors": "2.8.12",
     "@types/express": "4.17.14",
     "@types/jsonwebtoken": "8.5.9",
     "@types/mongoose": "5.11.97",
