--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "chakra-react-select": "^4.3.0",
     "framer-motion": "^7.4.0",
     "react": "18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.38.0",
     "react-icons": "^4.4.0",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@types/react": "18.0.17",
+    "@types/react-datepicker": "^4.4.2",
     "@types/react-dom": "18.0.6",
     "@types/react-redux": "^7.1.24",
     "@vitejs/plugin-react": "2.1.0",
