--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.3.4",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@mapbox/search-js-react": "^1.0.0-beta.13",
     "@reduxjs/toolkit": "^1.8.5",
     "framer-motion": "^7.4.0",
     "jwt-decode": "^3.1.2",
